# ros2_control_sim_boilerplate

./: .gitignore  README.md
docker/: template.Dockerfile
scripts/deploy/: base.sh  devel.sh
workspace/: README_arch.md  README_tree.md  pcd.cpp  test_jax.py  tt.text
workspace/ghalton/ghalton.egg-info/: PKG-INFO
workspace/local_preproc_cpp/: CMakeLists.txt  package.xml
workspace/local_preproc_cpp/include/local_preproc_cpp/: scan_preprocess.hpp
workspace/local_preproc_cpp/src/: scan_preprocess.cpp
workspace/mppi_controller_py/: package.xml  setup.cfg  setup.py
workspace/mppi_controller_py/launch/: mppi_controller.launch.py
workspace/mppi_controller_py/mppi_controller_py/: mppi_node.py
workspace/mppi_planner/config/: sim_config.yaml
workspace/mppi_planner/launch/: mppi_planner.launch.py
workspace/mppi_planner/mppi_planner/: mppi_class.py  mppi_planner_node.py  spawn_cylinder.py
workspace/non_ros/: dyn_visualization.py  main.py  mppi.py
workspace/non_ros/config/: sim_config.yaml
workspace/non_ros_task1/: dyn_visualization.py  main.py  mppi.py  mppi_test.py
workspace/planner_algo/: package.xml  setup.cfg  setup.py
workspace/planner_algo/launch/: mppi_node.launch.py
workspace/planner_algo/planner_algo/: mppi_node.py
workspace/project_utils/: CMakeLists.txt
workspace/project_utils/msg/: Eigen2dVector.msg  EigenVector.msg
workspace/project_utils/src/: integrator.cpp
workspace/sim_dynamics/: package.xml  setup.cfg  setup.py
workspace/sim_dynamics/launch/: sim_dynamics_node.launch.py
workspace/sim_dynamics/sim_dynamics/: robot_dynamics.py  sim_robot_node.py  (+1 more)
workspace/visualizer/: package.xml
(+7 files in other folders)
